<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubtractScreen">

    <Button
        android:id="@+id/submit"
        android:layout_width="131dp"
        android:layout_height="64dp"
        android:onClick="pSubmitClicked"
        android:text="@string/Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/Cancel"
        android:layout_width="107dp"
        android:layout_height="62dp"
        android:onClick="pCancelClicked"
        android:text="@string/Cancel"
        app:layout_constraintBottom_toTopOf="@+id/SelectCoin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="56dp"
        android:layout_height="55dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/coinSelect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/SelectCoin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781" />

    <TextView
        android:id="@+id/SelectCoin"
        android:layout_width="211dp"
        android:layout_height="57dp"
        android:text="@string/select_a_coin"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cancel"
        app:layout_constraintVertical_bias="0.545" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="169dp"
        android:layout_height="40dp"
        android:text="@string/coin_selected"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/coinSelect"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SelectCoin" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="141dp"
        android:layout_height="61dp"
        android:text="@string/amount_sold"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/coinPrice"
        app:layout_constraintEnd_toStartOf="@+id/amountPurchased"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="147dp"
        android:layout_height="43dp"
        android:text="@string/price"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toStartOf="@+id/coinPrice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/amountPurchased"
        android:layout_width="182dp"
        android:layout_height="57dp"
        android:digits="0123456789."
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/coinPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/coinSelect" />

    <EditText
        android:id="@+id/coinPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789."
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/amountPurchased" />

    <TextView
        android:id="@+id/coinSelect"
        android:layout_width="166dp"
        android:layout_height="37dp"
        android:text="@string/no_coin_selected"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/amountPurchased"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/SelectCoin" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</android.support.constraint.ConstraintLayout>