...
        android:layout_marginEnd="276dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="276dp"
        android:layout_marginStart="8dp"
        android:text="Name: Bitcoin"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        app:layout_constraintBottom_toTopOf="@+id/bitcoinPriceText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bitcoinPriceText"
        android:layout_width="wrap_content"
...
